[refactor] replace `ImmutableSet.of` by `Set.of`
Guava's method `ImmutableSet.of` was needed until in Java 8 edge, when Java didn't have its own constructor for Sets. Nowadays `Set.of` is the proper way to create immutable Sets.

Sometimes we still need to use `ImmutableSet` - where we need to keep the order of elements.