@@ -20,7 +20,6 @@ package org.openqa.selenium.grid.config;
 import static org.openqa.selenium.grid.config.StandardGridRoles.ALL_ROLES;
 
 import com.beust.jcommander.Parameter;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.ImmutableSortedSet;
 import java.io.PrintStream;
 import java.nio.file.Path;
@@ -30,8 +29,7 @@ import org.openqa.selenium.json.Json;
 
 public class ConfigFlags implements HasRoles {
 
-  private static final ImmutableSet<String> IGNORED_SECTIONS =
-      ImmutableSet.of("java", "lc", "term");
+  private static final Set<String> IGNORED_SECTIONS = Set.of("java", "lc", "term");
 
   @Parameter(
       names = "--config",
