@@ -25,15 +25,11 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.openqa.selenium.remote.Dialect.W3C;
 import static org.openqa.selenium.remote.http.HttpMethod.GET;
 
-import com.google.common.collect.ImmutableSet;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.Callable;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
@@ -90,7 +86,7 @@ class LocalNodeTest {
             .build();
 
     Either<WebDriverException, CreateSessionResponse> response =
-        node.newSession(new CreateSessionRequest(ImmutableSet.of(W3C), stereotype, emptyMap()));
+        node.newSession(new CreateSessionRequest(Set.of(W3C), stereotype, emptyMap()));
 
     if (response.isRight()) {
       CreateSessionResponse sessionResponse = response.right();
@@ -146,7 +142,7 @@ class LocalNodeTest {
 
     Capabilities stereotype = new ImmutableCapabilities("cheese", "brie");
     Either<WebDriverException, CreateSessionResponse> sessionResponse =
-        node.newSession(new CreateSessionRequest(ImmutableSet.of(W3C), stereotype, emptyMap()));
+        node.newSession(new CreateSessionRequest(Set.of(W3C), stereotype, emptyMap()));
     assertThatEither(sessionResponse).isLeft();
     assertThat(sessionResponse.left()).isInstanceOf(RetrySessionRequestException.class);
   }
@@ -155,7 +151,7 @@ class LocalNodeTest {
   void cannotCreateNewSessionsOnMaxSessionCount() {
     Capabilities stereotype = new ImmutableCapabilities("cheese", "brie");
     Either<WebDriverException, CreateSessionResponse> sessionResponse =
-        node.newSession(new CreateSessionRequest(ImmutableSet.of(W3C), stereotype, emptyMap()));
+        node.newSession(new CreateSessionRequest(Set.of(W3C), stereotype, emptyMap()));
 
     assertThatEither(sessionResponse).isLeft();
     assertThat(sessionResponse.left()).isInstanceOf(RetrySessionRequestException.class);
@@ -217,7 +213,7 @@ class LocalNodeTest {
       callables.add(
           () -> {
             Either<WebDriverException, CreateSessionResponse> response =
-                node.newSession(new CreateSessionRequest(ImmutableSet.of(W3C), caps, emptyMap()));
+                node.newSession(new CreateSessionRequest(Set.of(W3C), caps, emptyMap()));
             if (response.isRight()) {
               CreateSessionResponse res = response.right();
               assertThat(res.getSession().getCapabilities().getBrowserName()).isEqualTo("cheese");
@@ -262,8 +258,7 @@ class LocalNodeTest {
 
     for (int i = 0; i < 5; i++) {
       Either<WebDriverException, CreateSessionResponse> response =
-          localNode.newSession(
-              new CreateSessionRequest(ImmutableSet.of(W3C), stereotype, emptyMap()));
+          localNode.newSession(new CreateSessionRequest(Set.of(W3C), stereotype, emptyMap()));
       assertThat(response.isRight()).isTrue();
     }
 
@@ -291,8 +286,7 @@ class LocalNodeTest {
     LocalNode localNode = builder.build();
 
     Either<WebDriverException, CreateSessionResponse> response =
-        localNode.newSession(
-            new CreateSessionRequest(ImmutableSet.of(W3C), stereotype, emptyMap()));
+        localNode.newSession(new CreateSessionRequest(Set.of(W3C), stereotype, emptyMap()));
     assertThat(response.isRight()).isTrue();
 
     CreateSessionResponse sessionResponse = response.right();
@@ -326,8 +320,7 @@ class LocalNodeTest {
     LocalNode localNode = builder.build();
 
     Either<WebDriverException, CreateSessionResponse> response =
-        localNode.newSession(
-            new CreateSessionRequest(ImmutableSet.of(W3C), stereotype, emptyMap()));
+        localNode.newSession(new CreateSessionRequest(Set.of(W3C), stereotype, emptyMap()));
     assertThat(response.isRight()).isTrue();
 
     CreateSessionResponse sessionResponse = response.right();
@@ -359,8 +352,7 @@ class LocalNodeTest {
     LocalNode localNode = builder.build();
 
     Either<WebDriverException, CreateSessionResponse> response =
-        localNode.newSession(
-            new CreateSessionRequest(ImmutableSet.of(W3C), stereotype, emptyMap()));
+        localNode.newSession(new CreateSessionRequest(Set.of(W3C), stereotype, emptyMap()));
     assertThat(response.isRight()).isTrue();
 
     CreateSessionResponse sessionResponse = response.right();
@@ -387,8 +379,7 @@ class LocalNodeTest {
     LocalNode localNode = builder.build();
 
     Either<WebDriverException, CreateSessionResponse> response =
-        localNode.newSession(
-            new CreateSessionRequest(ImmutableSet.of(W3C), stereotype, emptyMap()));
+        localNode.newSession(new CreateSessionRequest(Set.of(W3C), stereotype, emptyMap()));
     assertThat(response.isRight()).isTrue();
 
     CreateSessionResponse sessionResponse = response.right();
@@ -415,8 +406,7 @@ class LocalNodeTest {
     LocalNode localNode = builder.build();
 
     Either<WebDriverException, CreateSessionResponse> response =
-        localNode.newSession(
-            new CreateSessionRequest(ImmutableSet.of(W3C), stereotype, emptyMap()));
+        localNode.newSession(new CreateSessionRequest(Set.of(W3C), stereotype, emptyMap()));
     assertThat(response.isRight()).isTrue();
 
     CreateSessionResponse sessionResponse = response.right();
